# takopi-preview

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/takopi_preview/: __init__.py  backend.py
src/takopi_tailscale/: backend.py
tests/: test_backend_worktrees.py
