[project]
name = "takopi-tailscale"
version = "0.1.0"
description = "Tailscale preview command plugin for Takopi"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
keywords = ["takopi", "tailscale", "preview"]
authors = [
  { name = "ZKP2P" }
]
dependencies = [
  "takopi>=0.20,<0.21",
]

[project.urls]
Homepage = "https://takopi.dev"

[project.entry-points."takopi.command_backends"]
preview = "takopi_tailscale.backend:BACKEND"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/takopi_tailscale"]
